annimate_core/tests/snapshots/export_matches__subtok_conflicting_name.snap
---
source: annimate_core/tests/export_matches.rs
info:
  corpus_paths:
    - subtok.demo_relANNIS.zip
    - subtok.demo_relANNIS.zip
  corpus_names:
    - subtok.demo
    - subtok.demo (1)
  aql_query: tok
  query_language: AQL
  export_columns:
    - Number
    - Data:
        Anno:
          Corpus:
            anno_key:
              - annis
              - node_name
    - Data:
        Anno:
          Document:
            anno_key:
              - annis
              - node_name
    - Data:
        Anno:
          MatchNode:
            anno_key:
              - annis
              - node_name
            index: 0
---
Number,Corpus node_name,Document node_name,#1 node_name
1,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_1
2,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_2
3,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_3
4,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_4
5,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_5
6,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_6
7,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_7
8,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_8
9,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_9
10,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_10
11,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_11
12,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_1
13,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_2
14,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_3
15,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_4
16,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_5
17,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_6
18,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_7
19,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_8
20,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_9
21,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_10
22,subtok.demo,subtok.demo/subtok.demo.doc01,subtok.demo/subtok.demo.doc01#tok_11
