annimate_core/tests/snapshots/export_matches__subtok_gap.snap
---
source: annimate_core/tests/export_matches.rs
info:
  corpus_paths:
    - subtok.demo_relANNIS.zip
  corpus_names:
    - subtok.demo
  aql_query: "pos=\"DT\" .5,5 pos=\"DT\""
  query_language: AQL
  export_columns:
    - Number
    - Data:
        Value:
          CorpusAnno:
            anno_key:
              - ""
              - language
    - Data:
        Value:
          DocumentAnno:
            anno_key:
              - annis
              - doc
    - Data:
        Value:
          MatchNodeAnno:
            anno_key:
              - grammar
              - lemma
            index: 0
    - Data:
        Value:
          MatchNodeAnno:
            anno_key:
              - grammar
              - lemma
            index: 1
    - Data:
        Text:
          segmentation: ~
          anno_key: Default
          left_context: 1
          right_context: 1
          primary_node_indices: ~
---
Number,Corpus language,Document,#1 lemma,#2 lemma,Context 1 (tokens),Match 1 (tokens),Context 2 (tokens),Match 2 (tokens),Context 3 (tokens)
1,English,subtok.demo.doc01,This,a,,T his,is (...) of,a,sub-
