annimate_core/tests/snapshots/export_matches__subtok_query_node_properties.snap
---
source: annimate_core/tests/export_matches.rs
info:
  corpus_paths:
    - subtok.demo_relANNIS.zip
  corpus_names:
    - subtok.demo
  aql_query: "var#norm=\"example\" | norm=\"subtokenized\" . norm=\"corpus\""
  query_language: AQL
  export_columns:
    - Number
    - Data:
        Value:
          MatchNodeAnno:
            anno_key:
              - grammar
              - norm
            index: 0
    - Data:
        Value:
          MatchNodeAnno:
            anno_key:
              - grammar
              - norm
            index: 1
    - Data:
        Value:
          QueryNodeProperty:
            key: Fragment
            match_node_index: 0
    - Data:
        Value:
          QueryNodeProperty:
            key: Variable
            match_node_index: 0
    - Data:
        Value:
          QueryNodeProperty:
            key: Fragment
            match_node_index: 1
    - Data:
        Value:
          QueryNodeProperty:
            key: Variable
            match_node_index: 1
---
Number,#2|#var norm,#3 norm,#2|#var query fragment,#2|#var query variable,#3 query fragment,#3 query variable
1,example,,"norm=""example""",var,,
2,subtokenized,corpus,"norm=""subtokenized""",2,"norm=""corpus""",3
